charts/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resights-api
  namespace: dev
spec:
  selector:
    app: resights-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
