charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resights-api-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-dev
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: dev-redirect-https@kubernetescrd
spec:
  tls:
    - hosts:
        - resights-api.sofia.dev.hre.cl
      secretName: resights-api
  rules:
    - host: resights-api.sofia.dev.hre.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resights-api
                port:
                  number: 80
